--- a/WindowsFormsShell/CommonThings/CommonThings.csproj
+++ b/WindowsFormsShell/CommonThings/CommonThings.csproj
@@ -41,7 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileData.cs" />
+    <Compile Include="FileHelper.cs" />
+    <Compile Include="IProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwTimer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
